After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742290 - Incompatible pointer type warning with set_extents
Incompatible pointer type warning with set_extents
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-04 01:17 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix warning (2.78 KB, patch)
2015-01-04 01:20 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-01-04 01:17:47 UTC
The arguments for set extents is not set up properly so this is triggering a warning in the terminal.
Comment 1 Magdalen Berns (irc magpie) 2015-01-04 01:20:09 UTC
Created attachment 293687 [details] [review]
patch to fix warning
Comment 2 André Klapper 2015-02-27 16:57:09 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]