fix imcompatable pointer w in set_extents

Bug https://bugzilla.gnome.org/show_bug.cgi?id=742290